# sales-analytics

./: .gitignore  README.md  app.py  pyproject.toml  utils.py
data/processed/: sales.db
notebooks/: 01_eda.ipynb  02_sql_analysis.ipynb
